continuous progress with booking admin page - responsive design, filters trigger on smaller devices with modal, etc. + fixes + other FE components edits

--- a/app/styles/customComponents.css
+++ b/app/styles/customComponents.css
@@ -27,7 +27,7 @@
 
 
 /* @radix-accordion */
-	.AccordionHeader[data-state='open'] > button[data-radix-collection-item] svg {
+	.AccordionHeader[data-state='open'] > button[data-radix-collection-item] svg.opener {
 		@apply rotate-180;
 	}
 	.AccordionHeader button[data-radix-collection-item] svg {
